--- a/Logistic.ipynb
+++ b/Logistic.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import matplotlib.image as mpimg\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -16,273 +15,77 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn import linear_model\n",
     "from sklearn import svm\n",
-    "#import cv2"
+    "from sklearn import preprocessing as prp\n",
+    "from helpers_img import *\n",
+    "from Post_processing import *\n",
+    "from helpers_img import *\n",
+    "from helpers_regression import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Helper functions\n",
-    "def load_image(infilename):\n",
-    "    data = mpimg.imread(infilename)\n",
-    "    return data\n",
-    "\n",
-    "def img_float_to_uint8(img):\n",
-    "    rimg = img - np.min(img)\n",
-    "    rimg = (rimg / np.max(rimg) * 255).round().astype(np.uint8)\n",
-    "    return rimg\n",
-    "\n",
-    "# Concatenate an image and its groundtruth\n",
-    "def concatenate_images(img, gt_img):\n",
-    "    nChannels = len(gt_img.shape)\n",
-    "    w = gt_img.shape[0]\n",
-    "    h = gt_img.shape[1]\n",
-    "    if nChannels == 3:\n",
-    "        cimg = np.concatenate((img, gt_img), axis=1)\n",
-    "    else:\n",
-    "        gt_img_3c = np.zeros((w, h, 3), dtype=np.uint8)\n",
-    "        gt_img8 = img_float_to_uint8(gt_img)          \n",
-    "        gt_img_3c[:,:,0] = gt_img8\n",
-    "        gt_img_3c[:,:,1] = gt_img8\n",
-    "        gt_img_3c[:,:,2] = gt_img8\n",
-    "        img8 = img_float_to_uint8(img)\n",
-    "        cimg = np.concatenate((img8, gt_img_3c), axis=1)\n",
-    "    return cimg\n",
-    "\n",
-    "def img_crop(im, w, h):\n",
-    "    list_patches = []\n",
-    "    imgwidth = im.shape[0]\n",
-    "    imgheight = im.shape[1]\n",
-    "    is_2d = len(im.shape) < 3\n",
-    "    for i in range(0,imgheight,h):\n",
-    "        for j in range(0,imgwidth,w):\n",
-    "            if is_2d:\n",
-    "                im_patch = im[j:j+w, i:i+h]\n",
-    "            else:\n",
-    "                im_patch = im[j:j+w, i:i+h, :]\n",
-    "            list_patches.append(im_patch)\n",
-    "    return list_patches\n",
-    "\n",
-    "def value_to_class(v):\n",
-    "    df = np.sum(v)\n",
-    "    if df > foreground_threshold:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return 0"
+    "''' Find a result from logistic regression after cross validation'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rotation(orig, gts):\n",
-    "    ks=[90,180,270]\n",
-    "    rotated=[ndimage.rotate(img,k) for img in orig for k in ks]\n",
-    "    gt_rotated=[ndimage.rotate(gt_img,k) for gt_img in gts for k in ks]\n",
-    "    orig=orig+rotated\n",
-    "    gts=gts+gt_rotated\n",
-    "    print(len(orig))\n",
-    "    print(len(gts))\n",
-    "    return orig,gts\n",
-    "\n",
-    "def add_gray_dimension(img):\n",
-    "    out=np.dot(img[...,:3], [0.299, 0.587, 0.114])\n",
-    "    shape_one=[out.shape[0], out.shape[1], 1]\n",
-    "    out = np.reshape(out, shape_one)\n",
-    "    return out\n",
-    "\n",
-    "def add_laplacian(img):\n",
-    "    laplbew=ndimage.filters.laplace(add_gray_dimension(img))\n",
-    "    lapl=ndimage.filters.laplace(img)\n",
-    "    return laplbew,lapl\n",
-    "\n",
-    "def add_sobel(img):\n",
-    "    sx = ndimage.sobel(img, axis=0, mode='constant')\n",
-    "    sy = ndimage.sobel(img, axis=1, mode='constant')\n",
-    "    sob = np.hypot(sx, sy)\n",
-    "    return sob\n",
-    "\n",
-    "def add_segment(im):\n",
-    "    n = 10\n",
-    "    l = 256\n",
-    "    im = ndimage.gaussian_filter(im, sigma=l/(4.*n))\n",
-    "    mask = (im > im.mean()).astype(np.float)\n",
-    "    mask += 0.1 * im\n",
-    "    img = mask + 0.2*np.random.randn(*mask.shape)\n",
-    "    hist, bin_edges = np.histogram(img, bins=60)\n",
-    "    bin_centers = 0.5*(bin_edges[:-1] + bin_edges[1:])\n",
-    "    binary_img = img > 0.5\n",
-    "    open_img = ndimage.binary_opening(binary_img)\n",
-    "    # Remove small black hole\n",
-    "    close_img = ndimage.binary_closing(open_img)\n",
-    "    close_img=add_gray_dimension(close_img)\n",
-    "    return close_img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_features(img):\n",
-    "    gray_img = add_gray_dimension(img)\n",
-    "    sob = add_sobel(img)\n",
-    "    lapbew,lap=add_laplacian(img)\n",
-    "    seg=add_segment(img)\n",
-    "    img = np.concatenate((img, gray_img), axis = 2)\n",
-    "    img = np.concatenate((img, sob), axis = 2)\n",
-    "    img = np.concatenate((img, lapbew), axis = 2)\n",
-    "    img = np.concatenate((img, lap), axis = 2)    \n",
-    "    img = np.concatenate((img, seg), axis = 2)\n",
-    "    \n",
-    "    feat_m = np.mean(img, axis=(0,1))\n",
-    "    feat_v = np.var(img, axis=(0,1))\n",
-    "    feat = np.append(feat_m, feat_v)\n",
-    "    return feat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calcul_F1(Y, label):    \n",
-    "    TN = 0\n",
-    "    FP = 0\n",
-    "    FN = 0\n",
-    "    TP = 0\n",
-    "    matrix = []\n",
-    "    \n",
-    "\n",
-    "    for i in range(len(Y)):\n",
-    "        if (Y[i]==0) & (label[i]==0):\n",
-    "            TN = TN + 1\n",
-    "        elif (Y[i]==1) & (label[i]==0):\n",
-    "            FN = FN + 1   \n",
-    "        elif (Y[i]==1) & (label[i]==1):\n",
-    "            TP = TP + 1  \n",
-    "        else:\n",
-    "            FP = FP + 1\n",
-    "    \n",
-    "    F1_score = 0\n",
-    "    if (TP+FP > 0) and (TP+FN > 0):\n",
-    "        precision = TP/(TP+FP)\n",
-    "        recall = TP/(TP+FN)\n",
-    "        F1_score = 2*precision*recall / (precision+recall)\n",
-    "    else:\n",
-    "        print('Something goes wrong...')\n",
-    "    \n",
-    "    return F1_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "300\n",
-      "300\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Obtain train set\n",
-    "# Loaded a set of images\n",
+    "# Settings\n",
     "foreground_threshold = 0.25 # percentage of pixels > 1 required to assign a foreground label to a patch\n",
+    "patch_size = 16 # each patch is 16*16 pixels\n",
+    "deg=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "# TRAINING SET\n",
+    "#\n",
+    "\n",
     "root_dir = \"training/\"\n",
     "image_dir = root_dir + \"images/\"\n",
     "files = os.listdir(image_dir)\n",
-    "n = min(75, len(files)) # Load maximum 20 images\n",
+    "n = min(75, len(files))\n",
     "imgs = [load_image(image_dir + files[i]) for i in range(n)]\n",
     "gt_dir = root_dir + \"groundtruth/\"\n",
     "gt_imgs = [load_image(gt_dir + files[i]) for i in range(n)]\n",
-    "imgs,gt_imgs = rotation(imgs,gt_imgs)\n",
     "\n",
-    "patch_size = 16 # each patch is 16*16 pixels\n",
-    "img_patches = [img_crop(imgs[i], patch_size, patch_size) for i in range(len(imgs))]\n",
-    "gt_patches = [img_crop(gt_imgs[i], patch_size, patch_size) for i in range(len(gt_imgs))]\n",
-    "img_patches = np.asarray([img_patches[i][j] \n",
-    "                          for i in range(len(img_patches)) \n",
-    "                          for j in range(len(img_patches[i]))])\n",
-    "gt_patches =  np.asarray([gt_patches[i][j] \n",
-    "                          for i in range(len(gt_patches)) \n",
-    "                          for j in range(len(gt_patches[i]))])\n",
+    "# Preprocess the image\n",
+    "X,Y = preprocessed(imgs,gt_imgs,patch_size,deg):\n",
     "\n",
-    "X = np.asarray([ extract_features(img_patches[i]) for i in range(len(img_patches))])\n",
-    "Y = np.asarray([value_to_class(np.mean(gt_patches[i])) for i in range(len(gt_patches))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F1_score = 0.4821605617351859\n"
-     ]
-    }
-   ],
-   "source": [
-    "logreg = linear_model.LogisticRegression(C=1e5, class_weight=\"balanced\")\n",
+    "lambdas = np.logspace(0,8,15)\n",
+    "\n",
+    "# Retrieve the best lambda obtained with cross validation\n",
+    "lam = lambdas[12]\n",
+    "\n",
+    "# Fit the model and predict\n",
+    "logreg = linear_model.LogisticRegression(C=lam, class_weight=\"balanced\")\n",
     "logreg.fit(X, Y)\n",
     "Z=logreg.predict(X)\n",
-    "print('F1_score = ' + str(calcul_F1(Y, Z)))"
+    "print('F1_score on the training set= ' + str(compute_F1(Y, Z)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F1_score = 0.061306750034408865\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "clf = svm.SVC(gamma='auto')\n",
-    "clf.fit(X,Y)\n",
-    "Z=clf.predict(X)\n",
-    "print('F1_score = ' + str(calcul_F1(Y, Z)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 15000 is out of bounds for axis 0 with size 15000",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-e1895615eafc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mZ_te\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_te\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'F1_score = '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcalcul_F1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mZ_te\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0mZ_te\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_te\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-5-f6eab5961413>\u001b[0m in \u001b[0;36mcalcul_F1\u001b[1;34m(Y, label)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m             \u001b[0mTN\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTN\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 15000 is out of bounds for axis 0 with size 15000"
-     ]
-    }
-   ],
-   "source": [
-    "# Obtain test set\n",
+    "#\n",
+    "# TEST SET\n",
+    "#\n",
+    "\n",
     "root = \"training/\"\n",
     "image_dir = root + \"images/\"\n",
     "files = os.listdir(image_dir)\n",
@@ -290,7 +93,11 @@
     "gt_dir = root_dir + \"groundtruth/\"\n",
     "gt_imgs_te = [load_image(gt_dir + files[i]) for i in np.arange(n+1,len(files))]\n",
     "\n",
-    "img_patches_te = [img_crop(imgs_te[i], patch_size, patch_size) for i in range(len(imgs_te))]\n",
+    "# Add features\n",
+    "imgs_te_aug=[add_features(imgs_te[i]) for i in range(len(imgs_te))]\n",
+    "\n",
+    "# Work on patches\n",
+    "img_patches_te = [img_crop(imgs_te_aug[i], patch_size, patch_size) for i in range(len(imgs_te_aug))]\n",
     "gt_patches_te = [img_crop(gt_imgs_te[i], patch_size, patch_size) for i in range(len(gt_imgs_te))]\n",
     "img_patches_te = np.asarray([img_patches_te[i][j] \n",
     "                             for i in range(len(img_patches_te)) \n",
@@ -298,14 +105,24 @@
     "gt_patches_te =  np.asarray([gt_patches_te[i][j] \n",
     "                             for i in range(len(gt_patches_te)) \n",
     "                             for j in range(len(gt_patches_te[i]))])\n",
-    "X_te = np.asarray([extract_features(img_patches_te[i]) for i in range(len(img_patches_te))])\n",
+    "\n",
+    "\n",
+    "# Obtain regressors\n",
+    "deg=3\n",
+    "img_patches_te=[extract_features(img_patches_te[i]) for i in range(len(img_patches_te))]\n",
+    "X_te = np.asarray([poly_features(img_patches_te[i],deg) for i in range(len(img_patches_te))])\n",
     "Y_te = np.asarray([value_to_class(np.mean(gt_patches_te[i])) for i in range(len(gt_patches_te))])\n",
     "\n",
+    "# Predict\n",
     "Z_te = logreg.predict(X_te)\n",
-    "print('F1_score = ' + str(calcul_F1(Y, Z_te)))\n",
+    "print('F1_score on the test set before post-processing= ' + str(compute_F1(Y_te, Z_te)))\n",
     "\n",
-    "Z_te = clf.predict(X_te)\n",
-    "print('F1_score = ' + str(calcul_F1(Y, Z_te)))"
+    "# Post-processing\n",
+    "Z_pp=[]\n",
+    "for i in range(len(gt_patches_te)):\n",
+    "    Z_pp = Z_pp + post_processing(Z_te[i*625:(i+1)*625],18,9,3,3)\n",
+    "\n",
+    "print('F1_score after post-processing= ' + str(compute_F1(Y_te, Z_pp)))"
    ]
   }
  ],
