--- a/Cross_Validation_regression.ipynb
+++ b/Cross_Validation_regression.ipynb
@@ -18,208 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "400\n",
-      "[array([ 1,  3,  6,  8, 11, 12, 13, 14, 18, 19, 22, 24, 26, 29, 30, 31, 32,\n",
-      "       33, 39, 40, 43, 45, 46, 47, 49]), array([ 0,  2,  4,  5,  7,  9, 10, 15, 16, 17, 20, 21, 23, 25, 27, 28, 34,\n",
-      "       35, 36, 37, 38, 41, 42, 44, 48])]\n",
-      "[array([ 0,  2,  4,  5,  7,  9, 10, 15, 16, 17, 20, 21, 23, 25, 27, 28, 34,\n",
-      "       35, 36, 37, 38, 41, 42, 44, 48]), array([ 1,  3,  6,  8, 11, 12, 13, 14, 18, 19, 22, 24, 26, 29, 30, 31, 32,\n",
-      "       33, 39, 40, 43, 45, 46, 47, 49])]\n",
-      "lambda: 0\n",
-      "thresh: 0\n",
-      "here\n",
-      "0.656379291065638\n",
-      "here\n",
-      "0.6135320107424412\n",
-      "thresh: 1\n",
-      "here\n",
-      "0.6695853094977501\n",
-      "here\n",
-      "0.607472193174256\n",
-      "thresh: 2\n",
-      "here\n",
-      "0.6326558450416042\n",
-      "here\n",
-      "0.5986551796595924\n",
-      "thresh: 3\n",
-      "here\n",
-      "0.5930023923444976\n",
-      "here\n",
-      "0.5979788593332559\n",
-      "thresh: 4\n",
-      "here\n",
-      "0.5499181669394435\n",
-      "here\n",
-      "0.566794380587484\n",
-      "thresh: 5\n",
-      "here\n",
-      "0.4769962982548915\n",
-      "here\n",
-      "0.5361855813307403\n",
-      "lambda: 1\n",
-      "thresh: 0\n",
-      "here\n",
-      "0.6569905885020978\n",
-      "here\n",
-      "0.6105117804436007\n",
-      "thresh: 1\n",
-      "here\n",
-      "0.6670721323439971\n",
-      "here\n",
-      "0.6197421661804837\n",
-      "thresh: 2\n",
-      "here\n",
-      "0.633881266132319\n",
-      "here\n",
-      "0.5991792065663475\n",
-      "thresh: 3\n",
-      "here\n",
-      "0.5933127117395788\n",
-      "here\n",
-      "0.6019690576652601\n",
-      "thresh: 4\n",
-      "here\n",
-      "0.545037667867671\n",
-      "here\n",
-      "0.5696428571428571\n",
-      "thresh: 5\n",
-      "here\n",
-      "0.47950747581354447\n",
-      "here\n",
-      "0.5381203215968949\n",
-      "lambda: 2\n",
-      "thresh: 0\n",
-      "here\n",
-      "0.6498637602179836\n",
-      "here\n",
-      "0.6077756752107346\n",
-      "thresh: 1\n",
-      "here\n",
-      "0.670166015625\n",
-      "here\n",
-      "0.6155285313376988\n",
-      "thresh: 2\n",
-      "here\n",
-      "0.6375664984313191\n",
-      "here\n",
-      "0.5990461049284578\n",
-      "thresh: 3\n",
-      "here\n",
-      "0.5927574948055803\n",
-      "here\n",
-      "0.6002788752033464\n",
-      "thresh: 4\n",
-      "here\n",
-      "0.5450049455984175\n",
-      "here\n",
-      "0.570732957457714\n",
-      "thresh: 5\n",
-      "here\n",
-      "0.47810026385224275\n",
-      "here\n",
-      "0.5329416701636593\n",
-      "lambda: 3\n",
-      "thresh: 0\n",
-      "here\n",
-      "0.6548455447752871\n",
-      "here\n",
-      "0.604496110778699\n",
-      "thresh: 1\n",
-      "here\n",
-      "0.6616485686080947\n",
-      "here\n",
-      "0.6139282032055489\n",
-      "thresh: 2\n",
-      "here\n",
-      "0.6322370209296003\n",
-      "here\n",
-      "0.6019582801191996\n",
-      "thresh: 3\n",
-      "here\n",
-      "0.5883229073577599\n",
-      "here\n",
-      "0.5907548273844353\n",
-      "thresh: 4\n",
-      "here\n",
-      "0.5358851674641149\n",
-      "here\n",
-      "0.5643335048893463\n",
-      "thresh: 5\n",
-      "here\n",
-      "0.47112837718523753\n",
-      "here\n",
-      "0.5331661092530658\n",
-      "lambda: 4\n",
-      "thresh: 0\n",
-      "here\n",
-      "0.6529787950185123\n",
-      "here\n",
-      "0.6053970169842228\n",
-      "thresh: 1\n",
-      "here\n",
-      "0.6536597489747732\n",
-      "here\n",
-      "0.6121985815602836\n",
-      "thresh: 2\n",
-      "here\n",
-      "0.6298825457525267\n",
-      "here\n",
-      "0.5964650766609881\n",
-      "thresh: 3\n",
-      "here\n",
-      "0.5838695196767919\n",
-      "here\n",
-      "0.5931178795628923\n",
-      "thresh: 4\n",
-      "here\n",
-      "0.5373430270984798\n",
-      "here\n",
-      "0.5591677503250976\n",
-      "thresh: 5\n",
-      "here\n",
-      "0.46164798006762764\n",
-      "here\n",
-      "0.5292479108635098\n",
-      "lambda: 5\n",
-      "thresh: 0\n",
-      "here\n",
-      "0.6476020919105374\n",
-      "here\n",
-      "0.6066793562900156\n",
-      "thresh: 1\n",
-      "here\n",
-      "0.6640335719575413\n",
-      "here\n",
-      "0.6110322641687955\n",
-      "thresh: 2\n",
-      "here\n",
-      "0.6153846153846154\n",
-      "here\n",
-      "0.5971973448530186\n",
-      "thresh: 3\n",
-      "here\n",
-      "0.5726366656599214\n",
-      "here\n",
-      "0.5916150881700338\n",
-      "thresh: 4\n",
-      "here\n",
-      "0.506608666555128\n",
-      "here\n",
-      "0.5524198697484356\n",
-      "thresh: 5\n",
-      "here\n",
-      "0.4545779685264664\n",
-      "here\n",
-      "0.5256518082422204\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] Impossibile trovare il percorso specificato: 'training/images/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-7a88644d71f4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mimage_dir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mroot_dir\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"images/\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mgt_dir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mroot_dir\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"groundtruth/\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mfiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage_dir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] Impossibile trovare il percorso specificato: 'training/images/'"
      ]
     }
    ],
@@ -245,7 +57,15 @@
     "\n",
     "trains,tests = obtain_splits(k_fold,ims)\n",
     "ims,gt_ims = preprocessed(ims,gt_ims,patch_size,deg)   \n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Select parameter values\n",
     "lambdas=np.logspace(-10,-6,6)\n",
     "thresh=np.linspace(0.25,0.4,6)\n",
