--- a/Logistic.ipynb
+++ b/Logistic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
     "gt_imgs = [load_image(gt_dir + files[i]) for i in range(n)]\n",
     "\n",
     "# Preprocess the image\n",
-    "X,Y = preprocessed(imgs,gt_imgs,patch_size,deg):\n",
+    "X,Y = preprocessed(imgs,gt_imgs,patch_size,deg)\n",
     "\n",
     "lambdas = np.logspace(0,8,15)\n",
     "\n",
